--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -33,7 +34,10 @@
   },
   "dependencies": {
     "react": "^16.4.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
-    "react-scrollbar": "^0.5.4"
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   }
 }
